--- a/website/package.json
+++ b/website/package.json
@@ -38,6 +38,8 @@
     "@hot-loader/react-dom": "16.13.0",
     "@packtracker/webpack-plugin": "2.3.0",
     "@svgr/webpack": "5.4.0",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.5",
     "@types/classnames": "2.2.10",
     "@types/enzyme": "3.10.5",
     "@types/jest": "25.2.3",
